--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
     "@shadcn/ui": "^0.0.4",
+    "@sumsub/websdk": "^2.3.13",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -48,5 +49,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
